# aniStats

./: Cargo.toml  config.toml
src/: api.rs  checker.rs  config.rs  main.rs  monitor.rs  types.rs
static/: index.html
static/assets/: main.js  style.css
