[package]
name = "aniStats"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = {version = "0.4.44", features = ["serde"]}
reqwest = "0.13.4"
serde = {version = "1.0.228", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
toml = "1.1.2"
serde_json = "1"
tower-http = { version = "0.6.11", features = ["cors", "fs"] }
